hive-macro/tests/macro/should_fail/function_argument_type.rs
#[hive_macro::hive_test]
fn test_function(test_channel: &mut String, handle: String) {}

fn main() {}
